# agent-email-interface

./: .env.example  Cargo.toml  README.md  email-client-comparison-protonbridge.md
src/: config.rs  lib.rs  main.rs
src/cli/: handlers.rs  mod.rs
src/cloak/: middleware.rs  mod.rs
src/http/: error.rs  handlers.rs  mod.rs  state.rs
src/logger/: loguru.rs  mod.rs
src/mail/: error.rs  imap.rs  mod.rs  session.rs  smtp.rs  types.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/store/: database.rs  mod.rs  sqlite_and_tantivy.rs
tests/: e2e_test.rs  http_server_test.rs  integration.rs
