[package]
name = "panorama-mail"
version = "0.1.0"
edition = "2024"

[lib]
name = "panorama_mail"
path = "src/lib.rs"

[[bin]]
name = "panorama-mail"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tantivy = "0.22"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["clock"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-imap = "0.11.2"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }
mail-parser = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"

[dev-dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
